# video-editor

./: .gitignore  README.md  init-android.sh  init-glm.sh  init-x264.sh
editor/app/: CMakeLists.txt  build.gradle
editor/app/src/androidTest/java/me/shiki/editor/: ExampleInstrumentedTest.kt
editor/app/src/main/: AndroidManifest.xml
editor/app/src/main/cpp/: AndroidLog.h  CMakeLists.txt  android_log.h  audio_encoder.cpp  audio_encoder.h  call_java_media_editor.cpp  call_java_media_editor.h  constant.h  decoder.cpp  decoder.h  demuxer.cpp  demuxer.h  img_utils.cpp  img_utils.h  jni_impl.cpp  media.cpp  media.h  media_editor.cpp  media_editor.h  media_utils.cpp  media_utils.h  muxer.cpp  muxer.h  video_encoder.cpp  video_encoder.h
editor/app/src/main/cpp/ffmpeg/: ffmpeg.h
editor/app/src/main/cpp/filter/: video_filter.cpp  video_filter.h
editor/app/src/main/java/me/shiki/editor/: MainActivity.kt  MediaEditor.kt  Settings.java  Utils.kt
editor/app/src/main/java/me/shiki/editor/services/: MediaPlayerService.java
editor/app/src/main/java/me/shiki/editor/view/widget/: MediaProgressBar.kt
editor/app/src/main/java/me/shiki/editor/view/widget/media/: AndroidMediaController.java  FileMediaDataSource.java  IMediaController.java  IRenderView.java  IjkVideoView.java  InfoHudViewHolder.java  MeasureHelper.java  (+4 more)
editor/app/src/main/res/layout/: activity_main.xml
editor/app/src/main/res/menu/: menu.xml
editor/app/src/main/res/values/: attrs_media_progress_bar.xml  strings.xml  styles.xml
editor/app/src/test/java/me/shiki/editor/: ExampleUnitTest.kt
(+25 files in other folders)
